tests/NormalTests/paczka1/small_fuzzy/47142606.err
Error in line 5: t8ZDtxMA43719,7
Error in line 9: t8ZDtxM A437 30,8
Error in line 13: A437 S365 53,8
